# metric-engine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: api.rst  calc_collections_migration.rst  changelog.md  conf.py  contributing.md  faq.md  glossary.md  index.rst  license.md  provenance_README.md  quickstart.md  requirements.txt  testing.md  usage.rst
docs/concepts/: engine.md  financial_value.md  formatting.md  null_behaviour.md  policy.md  policy_context.md  provenance.md  reductions_utils.md  registry_collections.md  units.md
docs/design/: equality_hashing.md  null_strategy.md  performance.md  policy_resolution.md  unit_algebra.md
docs/howto/: conversion_patterns.md  cross_package_deps.md  custom_policy.md  custom_reducers.md  custom_rendering.md  internationalization.md  new_calc.md  new_unit.md  provenance_best_practices.md  provenance_configuration.md  provenance_usage.md  testing_calcs.md  unit_system_usage.md  zero_denominator.md
docs/reference/: api_index.rst  engine.rst  exceptions.rst  formatting_reference.md  null_behaviour.rst  policy.rst  policy_context.rst  provenance.rst  reductions.rst  registry.rst  registry_collections.rst  units.rst  utils.rst  value.rst
docs/reference/calculations/: growth.rst  inventory.rst  pricing.rst  profitability.rst  ratios.rst  utilities.rst  variance.rst
docs/tutorials/: domain_package.md  formatting.md  money_tax_percent.md  strict_vs_safe.md  tour.md
examples/: provenance_demo.py  provenance_example.py  unit_system_demo.py
metricengine_django/: README.md  pyproject.toml
metricengine_django/src/metricengine_django/: __init__.py
metricengine_django/tests/: test_plugin.py
src/metricengine/: README.md  __init__.py  _typed_forwarders.py  base.py  engine.py  engine.pyi  equality_mode.py  exceptions.py  factories.py  formatting.py  integrations.py  null_behaviour.py  policy.py  policy_context.py  provenance.py  provenance_config.py  reductions.py  registry.py  registry_collections.py  rendering.py  shortcuts.py  typed_api.py  typed_api.pyi  units.py  utils.py  value.py
src/metricengine/calculations/: __init__.py  __init__.pyi  growth.py  inventory.py  pricing.py  profitability.py  ratios.py  rules.py  sample.py  unit_economics.py  utilities.py  variance.py
src/metricengine/formatters/: __init__.py  babel_adapter.py  base.py
src/metricengine/plugins/: __init__.py
tests/: test_basic.py  test_provenance_integration.py  test_unit_system_integration.py
tests/unit/: __init__.py  test_arithmetic_provenance.py  test_babel_integration.py  test_basic_functionality.py  test_calc_spans.py  test_calculations.py  test_conversion_system.py  test_engine.py  test_engine_many.py  test_engine_provenance.py  test_factories.py  test_formatters.py  test_formatters_babel.py  test_null_behaviour.py  test_policy.py  test_policy_context.py  test_pricing_calculations.py  test_profitability_calculations.py  test_provenance_access_methods.py  test_provenance_basic.py  test_provenance_error_handling.py  test_provenance_export.py  test_provenance_export_enhanced.py  test_provenance_export_simple.py  test_provenance_hashing.py  test_provenance_performance.py  test_ratio_and_kwargs.py  test_ratios_calculations.py  test_reductions.py  test_registry.py  test_rendering.py  test_rules_calculations.py  test_sample_calculations.py  test_shortcuts.py  test_smoke.py  test_unit_arithmetic_safety.py  test_unit_aware_rendering.py  test_unit_economics_calculations.py  test_unit_provenance_comprehensive.py  test_units.py  (+5 more)
tools/: gen_stubs.py
